cmake_minimum_required(VERSION 3.23)
project(CppConcurrencyInAction)

set(CMAKE_CXX_STANDARD 14)

add_executable(CppConcurrencyInAction main.cpp chapter2/item1.cpp chapter2/item2.cpp chapter3/item1.cpp chapter3/item2.cpp chapter3/item3.cpp chapter3/item4.cpp chapter3/item5.cpp chapter3/item6.cpp chapter3/item7.cpp chapter3/item8.cpp chapter3/item9.cpp chapter3/item10.cpp)
